[package]
name = "rmqx"
version = "0.1.0"
authors = ["gaoqingfeng <gao.qingfeng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rmqxd"
path = "src/main.rs"
[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
futures = "0.3"
#reqwest = { version = "0.10", features = ["json"] }
#native-tls = "0.2"
tokio = {version = "0.2", features = ["full"]}
tokio-util = {version = "0.2", features = ["full"]}
#tokio-tls = {version = "0.3"}
bitflags = "1.2"
bytes = "0.5"
bytestring="0.1"
byteorder = "1.3"
hex = "0.4"
base64 = "0.11"
thiserror = "1.0"
log = "0.4"
env_logger = { version = "0.7" }
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
coap = "0.8"
hyper = "0.13"
lazy_static="1.4"
parking_lot="0.10"
config = "0.10"
serde_derive = "1.0"

[profile.release]
debug = true
