[package]
name = "rmqx"
version = "0.1.0"
authors = ["gaoqingfeng <gao.qingfeng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rmqxd"
path = "src/main.rs"
[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
futures = "0.3"
reqwest = { version = "0.10", features = ["json"] }
native-tls = "0.2"
tokio = {version = "0.2", features = ["full"]}
# tokio-util = {version = "0.2", features = ["full"]}
tokio-tls = {version = "0.3"}
bitflags = "1.2"
bytes = "0.5"
bytestring="0.1"
byteorder = "1.3"
hex = "0.4"
base64 = "0.11"
thiserror = "1.0"
log = "0.4"
env_logger = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
coap = "0.8"
hyper = "0.13"
lazy_static="1.4"
parking_lot="0.10"
config = "0.10"
chrono = "0.4"
ratelimit_meter = "5.0"
cargo-valgrind = "1.3.0"
pin-project = "0.4"
futures-sink = "0.3"
futures-core = "0.3"
# pin-project-lite = "0.1"
# [target.'cfg(unix)'.dependencies]
# nix = "0.17"
# jemallocator = { version = "0.3", optional = true }

# [target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3", features = ["minwindef", "consoleapi"] }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3"

# [features]
# default = ["alloc-jemalloc"]
# alloc-jemalloc = ["jemallocator"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

